--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 body {
-  background: linear-gradient(#62016e, #070047) fixed;
+  background: linear-gradient(#ab22bd, #100385) fixed;
   text-align: center;
   /* height: 100vh;
   width: 100vw; */
