--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -16,3 +16,20 @@
   align-items: center;
   justify-content: space-between;
 }
+
+@media (max-width: 768px) {
+  .homeContainer {
+    /* position: absolute; */
+    width: 100%;
+    /* background: linear-gradient(#070047, #62016e); */
+  }
+  .showsContainer {
+    margin: 2rem;
+  }
+  .paginate {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+  }
+}
