--- a/src/components/NavBar/NavBar.module.css
+++ b/src/components/NavBar/NavBar.module.css
@@ -5,14 +5,6 @@
   padding: 2rem;
 }
 
-.logo {
-  margin-left: 5vw;
-  height: 8rem;
-  width: auto;
-  border-radius: 50%;
-  box-shadow: 0 5px 25px rgb(255, 255, 255);
-}
-
 .menu {
   display: flex;
   gap: 20%;
@@ -30,4 +22,25 @@
 }
 .filtrosDown {
   display: flex;
+}
+
+@media (max-width: 768px) {
+  .navContainer {
+    display: flex;
+    top: 0;
+    font-size: 1rem;
+    padding: 0.1rem;
+  }
+
+  .menu {
+    display: flex;
+    flex-direction: column;
+    gap: 10%;
+  }
+  .right {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 }
