--- a/src/components/NavBar/NavBarAll.module.css
+++ b/src/components/NavBar/NavBarAll.module.css
@@ -2,10 +2,44 @@
   display: flex;
   gap: 30%;
 }
+.logo {
+  margin-left: 5vw;
+  height: 8rem;
+  width: auto;
+  border-radius: 50%;
+  box-shadow: 0 5px 25px rgb(255, 255, 255);
+}
 
 .loginContainer {
   display: flex;
   justify-content: end;
   align-items: center;
   font-size: 1rem;
+}
+
+@media (max-width: 768px) {
+  .NavBarAllContainer {
+    display: flex;
+    /* gap: 40%; */
+    justify-content: space-between;
+  }
+  .column {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .logo {
+    margin-left: 5vw;
+    height: 5rem;
+    width: auto;
+    border-radius: 50%;
+    box-shadow: 0 5px 25px rgb(255, 255, 255);
+  }
+
+  .loginContainer {
+    display: flex;
+    justify-content: end;
+    align-items: flex-start;
+    font-size: 1rem;
+  }
 }
