--- a/src/components/HomeTheater/HomeTheater.module.css
+++ b/src/components/HomeTheater/HomeTheater.module.css
@@ -1,8 +1,6 @@
 .homeContainer {
-  /* position: absolute; */
   width: 100%;
-
-  /* background: linear-gradient(#62016e, #070047); */
+  height: 100%;
 }
 
 .showsContainer {
@@ -11,4 +9,10 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin: auto;
+}
+
+.footerContainer {
+  position: absolute;
+  bottom: 0;
 }
