--- a/src/components/Shows/ShowDetail.module.css
+++ b/src/components/Shows/ShowDetail.module.css
@@ -1,12 +1,23 @@
 .detailContainer {
   color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .navDetail {
   display: flex;
-  gap: 20rem;
+  justify-content: flex-start;
   align-items: center;
-  gap: 30vw;
+  margin-bottom: 1.5rem;
+  width: 100vw;
+}
+
+.title {
+  width: fit-content;
+  background-color: rgba(155, 155, 155, 0.555);
+  margin: auto;
 }
 
 .logo {
@@ -19,43 +30,45 @@
 }
 
 .cardDetail {
-  margin: 3rem;
-  justify-content: space-around;
-  /* margin: 20px; */
+  margin: 2rem;
   background-color: #ffefad2a;
   backdrop-filter: blur(18px);
   border-radius: 8px;
   -webkit-box-shadow: 20px 20px 22px rgba(0, 0, 0, 0.2);
   box-shadow: 20px 20px 22px rgba(0, 0, 0, 0.2);
   font-family: "Poppins", sans-serif;
+  width: 70vw;
+  /* border: 2px solid rgb(255, 255, 255); */
   display: flex;
 }
 
 .izq {
-  display: flex;
+  /* display: flex; */
   /* gap: 20rem; */
+
+  margin-top: 4rem;
 }
 
 .image {
-  height: 30rem;
+  height: 18rem;
   width: auto;
 }
 
 .datos {
-  padding: 0.5rem;
+  /* padding: 0.5rem; */
+  /* display: flex;
+  justify-content: center; */
+  /* height: fit-content; */
   display: flex;
-  justify-content: center;
-  height: fit-content;
-  gap: 5rem;
+  gap: 2rem;
 }
 
-h3 {
+.label {
   background-color: rgba(173, 176, 179, 0.164);
-  font-size: 1.3rem;
+
   font-weight: 800;
 }
-h4 {
-  font-size: 1rem;
+.data {
   font-weight: 100;
 }
 
@@ -63,9 +76,94 @@ h4 {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 9rem;
+
+  margin: 2rem 0 2rem 0;
 }
 
-.btn {
-  height: fit-content;
+.inf {
+  padding: 1rem;
+  width: 20rem;
+}
+@media (max-width: 768px) {
+  .detailContainer {
+    color: white;
+  }
+
+  .navDetail {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    margin-bottom: 1.5rem;
+  }
+
+  .title {
+    width: fit-content;
+    background-color: rgba(155, 155, 155, 0.555);
+    margin: auto;
+  }
+
+  .logo {
+    margin-top: 2.5rem;
+    margin-left: 1rem;
+    height: 8rem;
+    width: auto;
+    border-radius: 50%;
+    box-shadow: 0 5px 25px rgb(255, 255, 255);
+  }
+
+  .cardDetail {
+    margin: 3rem;
+    background-color: #ffefad2a;
+    backdrop-filter: blur(18px);
+    border-radius: 8px;
+    -webkit-box-shadow: 20px 20px 22px rgba(0, 0, 0, 0.2);
+    box-shadow: 20px 20px 22px rgba(0, 0, 0, 0.2);
+    font-family: "Poppins", sans-serif;
+    width: 80vw;
+    /* border: 2px solid rgb(255, 255, 255); */
+    display: flex;
+    flex-direction: column;
+  }
+
+  .izq {
+    /* display: flex; */
+    /* gap: 20rem; */
+  }
+
+  .image {
+    height: 18rem;
+    width: 80vw;
+  }
+
+  .datos {
+    /* padding: 0.5rem; */
+    /* display: flex;
+    justify-content: center; */
+    /* height: fit-content; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .label {
+    background-color: rgba(173, 176, 179, 0.164);
+    font-size: 1em;
+    font-weight: 800;
+  }
+  .data {
+    font-size: 0.8em;
+    font-weight: 100;
+  }
+
+  .btnContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 80vw;
+    margin: 2rem 0 2rem 0;
+  }
+
+  .inf {
+    padding: 1rem;
+  }
 }
