--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,5 +1,37 @@
+.footerContainer {
+  background: linear-gradient(#adabadd8, #000000) fixed;
+  bottom: 0;
+  margin: 0;
+  height: 18rem;
+  width: 100vw;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 0.5rem;
+  padding: 1rem 0 1rem 0;
+}
+.logoContainer {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 1rem;
+}
+
+.linksContainer {
+  display: flex;
+  gap: 4rem;
+  justify-content: center;
+}
+
+.links {
+  text-decoration: none;
+  color: white;
+}
 .img {
-  width: 7em;
+  height: 5rem;
+  width: auto;
+  border-radius: 50%;
+  box-shadow: 0 5px 25px rgb(255, 255, 255);
 }
 
 @media (max-width: 768px) {
@@ -31,7 +63,6 @@
     color: white;
   }
   .img {
-    margin-left: 5vw;
     height: 5rem;
     width: auto;
     border-radius: 50%;
