--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -1,6 +1,6 @@
 .homeContainer {
   width: 100%;
-  height: 100vh;
+  height: 100%;
   /* background: linear-gradient(#070047, #62016e); */
 }
 .searchContainer {
@@ -22,8 +22,8 @@
 }
 
 .footerContainer {
-  position: absolute;
-  bottom: 0;
+  position: fixed;
+  bottom: 0px;
 }
 
 @media (max-width: 768px) {
@@ -43,7 +43,7 @@
   }
 
   .footerContainer {
-    position: absolute;
-    bottom: 0;
+    position: fixed;
+    bottom: 0px;
   }
 }
