--- a/src/components/NavBar/NavBarViewer.module.css
+++ b/src/components/NavBar/NavBarViewer.module.css
@@ -1,12 +1,27 @@
 .NavBarAllContainer {
   display: flex;
-  gap: 30%;
+  /* gap: 40%; */
+  justify-content: space-between;
+}
+.column {
+  display: flex;
+  flex-direction: column;
+  width: 6rem;
+  margin-bottom: 2rem;
+}
+
+.logo {
+  height: 5rem;
+  width: auto;
+  border-radius: 50%;
+  box-shadow: 0 5px 25px rgb(255, 255, 255);
+  margin-bottom: 2rem;
 }
 
 .miCuenta {
   display: flex;
   justify-content: end;
-  align-items: center;
+  align-items: flex-start;
   font-size: 1rem;
 }
 
