--- a/src/components/Carrousel/CarruselCard.module.css
+++ b/src/components/Carrousel/CarruselCard.module.css
@@ -1,4 +1,4 @@
-.carouselInner {
+.ContainerReview {
   height: 100%;
   width: 100%;
   background-position: center;
@@ -8,7 +8,7 @@
 }
 
 @media (max-width: 768px) {
-  .carouselInner {
+  .ContainerReview {
     height: 50%;
     width: 50%;
     background-position: center;
