Styles navbar, carousel,navbarAll, searchbar

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 body {
-  background: linear-gradient(#b351c0b2, #170b81c2) fixed;
+  /* background: linear-gradient(#b351c0b2, #170b81c2) fixed; */
   text-align: center;
   /* height: 100vh;
   width: 100vw; */
