--- a/src/components/Carrousel/Carrousel.module.css
+++ b/src/components/Carrousel/Carrousel.module.css
@@ -1,2 +1,26 @@
 .carrouselContainer {
 }
+
+.carouselContent {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* background-image: linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 0.2) 0%,
+    rgba(0, 0, 0, 0.7) 100%
+  ); */
+}
+
+.title {
+  color: white;
+  width: fit-content;
+  background-color: rgba(164, 166, 168, 0.575);
+}
+
+.title:hover {
+  box-shadow: 15px white;
+}
+
+.image {
+}
