--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -3,27 +3,12 @@
   height: 100%;
   /* background: linear-gradient(#070047, #62016e); */
 }
-.searchContainer {
-  display: flex;
-  justify-content: center;
-}
-.showsContainer {
-  margin-top: 2rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
+
 .paginate {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-}
-
-.footerContainer {
-  position: fixed;
-  bottom: 0px;
 }
 
 @media (max-width: 768px) {
@@ -41,9 +26,14 @@
     align-items: center;
     justify-content: space-between;
   }
+}
 
-  .footerContainer {
-    position: fixed;
-    bottom: 0px;
-  }
+.showsContainer {
+  margin-top: 2rem;
+  display: flex;
+  justify-content: center;
+}
+
+.paginate {
+  margin-bottom: 3rem;
 }
