styles carrousel reviews, cards

--- a/src/components/Carrousel/CarruselReview.module.css
+++ b/src/components/Carrousel/CarruselReview.module.css
@@ -7,6 +7,16 @@
   display: flex;
 }
 
+.scoreContainer {
+  display: flex;
+  justify-content: center;
+  gap: 2rem;
+}
+
+.review {
+  font-style: italic;
+}
+
 @media (max-width: 768px) {
   .ContainerReview {
     height: 50%;
