--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -7,33 +7,22 @@
 .paginate {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
-  justify-content: space-between;
+  margin: 2rem;
 }
 
-@media (max-width: 768px) {
-  .homeContainer {
-    /* position: absolute; */
-    width: 100%;
-    /* background: linear-gradient(#070047, #62016e); */
-  }
-  .showsContainer {
-    margin: 2rem;
-  }
-  .paginate {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-  }
+.carouselContainer {
+  margin: 3rem;
 }
 
 .showsContainer {
-  margin-top: 2rem;
-  display: flex;
-  justify-content: center;
+  width: 52rem;
+  margin: auto;
 }
 
-.paginate {
-  margin-bottom: 3rem;
+@media (max-width: 768px) {
+  .showsContainer {
+    width: 24rem;
+  }
 }
