--- a/src/components/ShowCard/ShowCard.module.css
+++ b/src/components/ShowCard/ShowCard.module.css
@@ -78,16 +78,18 @@
   /* border: 2px solid red; */
   width: 22rem;
   display: flex;
-  margin-bottom: 2rem;
+  margin-left: 1rem;
 }
 
 .cardContainer {
 }
 
 .cardContainer:hover {
-  transform: scale(1.03);
+  /* transform: scale(1.03);
   opacity: 0.95;
-  transition: all 250ms ease-in-out 0s;
+  transition: all 250ms ease-in-out 0s; */
+  box-shadow: 0 12px 24px 0 rgba(0, 0, 0, 0.2);
+  transform: scale(1.02);
 }
 
 .title {
