--- a/src/components/Forms/FormPutViewer.module.css
+++ b/src/components/Forms/FormPutViewer.module.css
@@ -26,8 +26,13 @@
   margin: 0 auto;
   align-items: left;
   margin-top: 1rem;
-  
+  margin-bottom: 1rem;
 }
 .imagen{
   height: 5rem;
+}
+
+.btnContainer{
+  padding: 1rem;
+  
 }
