--- a/src/components/NavBar/NavBarPerfilViewer.module.css
+++ b/src/components/NavBar/NavBarPerfilViewer.module.css
@@ -12,11 +12,28 @@
 }
 
 .profileImage {
-  height: 5rem;
+  height: 6rem;
+  width: 6rem;
   border-radius: 50%;
 }
 
 .left {
   display: flex;
-  gap: 3rem;
+  justify-content: center;
+  align-items: center;
+  gap: 5rem;
+}
+
+@media (max-width: 768px) {
+  .profileImage {
+    height: 3rem;
+    width: 3rem;
+    border-radius: 50%;
+  }
+  .left {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 2rem;
+  }
 }
