--- a/src/components/SalesHistory/SalesHistory.module.css
+++ b/src/components/SalesHistory/SalesHistory.module.css
@@ -1,4 +1,10 @@
-.salesContainer {
-  margin-bottom: 3rem;
-  border: 2px solid red;
+.cardContainer {
+  width: 80vw;
+  margin: auto;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.card {
+  margin: 2rem;
 }
