--- a/src/components/Carrousel/Carrousel.module.css
+++ b/src/components/Carrousel/Carrousel.module.css
@@ -2,25 +2,49 @@
 }
 
 .carouselContent {
-  display: flex;
+  /* display: flex;
+  flex-direction: column;
   justify-content: center;
+  align-items: center; */
+
+  display: none;
+  transition: all 0.5s;
+}
+
+.carrouselContainer :hover > .carouselContent {
+  display: block;
+  transition: all 0.5s;
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
   align-items: center;
-  /* background-image: linear-gradient(
-    to bottom,
-    rgba(0, 0, 0, 0.2) 0%,
-    rgba(0, 0, 0, 0.7) 100%
-  ); */
+}
+
+.carrouselContainer :hover > .image {
+  opacity: 0.3;
 }
 
 .title {
-  color: white;
+  font-size: 2.5rem;
+  font-family: "Montserrat", sans-serif;
+  color: rgb(0, 0, 0);
   width: fit-content;
-  background-color: rgba(164, 166, 168, 0.575);
 }
 
-.title:hover {
-  box-shadow: 15px white;
+.text {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.image {
+@media (max-width: 768px) {
+  .carrouselContent {
+    display: none;
+  }
+  .text {
+    display: none;
+  }
+  .carrouselContainer :hover > .image {
+    opacity: 1;
+  }
 }
