--- a/src/components/Shows/ShowDetail.module.css
+++ b/src/components/Shows/ShowDetail.module.css
@@ -3,11 +3,17 @@
   margin-bottom: 3rem;
 }
 
+.detailContainer {
+  margin-bottom: 3rem;
+}
+
 .cardDetail {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  border: 2px solid black;
+  margin: 2rem;
 }
 
 .title {
@@ -20,6 +26,18 @@
 .first {
   width: 80vw;
   display: flex;
+  justify-content: center;
+  gap: 2rem;
+  margin: 2rem 0 2rem 0;
+}
+
+h3 {
+  color: rgb(133, 138, 143);
+}
+.timerContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .image {
@@ -29,7 +47,8 @@
 }
 
 .description {
-  width: 40vw;
+  width: 90vw;
+  font-size: 1rem;
 }
 
 .timer {
