--- a/src/components/Carrousel/CarruselReview.module.css
+++ b/src/components/Carrousel/CarruselReview.module.css
@@ -10,11 +10,19 @@
 .scoreContainer {
   display: flex;
   justify-content: center;
-  gap: 2rem;
+  gap: 1rem;
 }
 
 .review {
   font-style: italic;
+}
+
+.card {
+  border: 2px solid rgba(179, 179, 179, 0.726);
+  width: fit-content;
+  padding: 0.5rem;
+  border-radius: 1rem;
+  margin: auto;
 }
 
 @media (max-width: 768px) {
