--- a/src/components/Forms/FormViewers.module.css
+++ b/src/components/Forms/FormViewers.module.css
@@ -1,4 +1,4 @@
-.formTheaterContainer {
+.formViewerContainer {
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -13,12 +13,15 @@
   color: black;
 }
 
-.formTheaterCreate {
+.formViewerCreate {
   display: flex;
   flex-direction: column;
-
+  /* border: 0.3rem solid rgba(20,11,14,0.76);
+    border-radius: 2rem;
+    border-color: black; */
   max-width: 40rem;
   max-height: 80rem;
+  /* box-shadow: rgb(51, 49, 49) 10px 10px; */
   padding: 50px 40px;
   margin: 0 auto;
   align-items: left;
