--- a/src/components/NavBar/NavBarViewer.module.css
+++ b/src/components/NavBar/NavBarViewer.module.css
@@ -17,6 +17,11 @@
   border-radius: 50%;
 }
 
+.name {
+  color: rgb(255, 255, 255);
+  margin-top: 1rem;
+}
+
 @media (max-width: 768px) {
   .buttonsContainer {
     width: 100vw;
@@ -27,5 +32,11 @@
     height: 3rem;
     width: 3rem;
     border-radius: 50%;
+  }
+
+  .profileContainer {
+    display: flex;
+    flex-direction: row-reverse;
+    gap: 2rem;
   }
 }
