added name to navBarTheater

--- a/src/components/NavBar/NavBarTheater.module.css
+++ b/src/components/NavBar/NavBarTheater.module.css
@@ -7,17 +7,18 @@
   margin-bottom: 3rem;
 }
 
-.left {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 5rem;
+.profileContainer {
+  margin-left: -1.5rem;
 }
 
 .profileImage {
-  height: 6rem;
-  width: 6rem;
+  height: 5rem;
+  width: 5rem;
   border-radius: 50%;
+}
+.name {
+  color: rgb(255, 255, 255);
+  margin-top: 1rem;
 }
 
 @media (max-width: 768px) {
@@ -26,10 +27,11 @@
     width: 3rem;
     border-radius: 50%;
   }
-  .left {
-    width: 100%;
+  .profileContainer {
     display: flex;
-    justify-content: space-between;
-    margin-bottom: 2rem;
+    flex-direction: row-reverse;
+    width: 60vw;
+    margin-top: -3rem;
+    margin-left: 9rem;
   }
 }
