--- a/src/components/Shows/ShowDetail.module.css
+++ b/src/components/Shows/ShowDetail.module.css
@@ -12,7 +12,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  border: 2px solid black;
+  /* border: 2px solid black; */
   margin: 2rem;
 }
 
@@ -29,6 +29,30 @@
   justify-content: center;
   gap: 2rem;
   margin: 2rem 0 2rem 0;
+}
+
+.boxSummary {
+  width: 63rem;
+  height: auto;
+}
+
+.box {
+  /* border: 2px solid rgb(122, 122, 122); */
+  width: 20rem;
+  height: 6rem;
+  box-shadow: 0 12px 24px 0 rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
+}
+.box1 {
+  /* border: 2px solid rgb(122, 122, 122); */
+  width: 20rem;
+  height: 8rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0 12px 24px 0 rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
 }
 
 h3 {
@@ -53,7 +77,27 @@ h3 {
 
 .timer {
   display: flex;
+  gap: 0.3rem;
+}
+
+.btn {
+  margin-top: 2rem;
 }
 
 @media (max-width: 768px) {
+  .boxSummary {
+    width: 90vw;
+  }
+
+  .timer {
+    gap: 0.1rem;
+  }
+
+  h3 {
+    font-size: 0.7rem;
+  }
+  .first {
+    display: flex;
+    flex-direction: column;
+  }
 }
