--- a/src/components/NavBar/NavBarTheater.module.css
+++ b/src/components/NavBar/NavBarTheater.module.css
@@ -21,6 +21,12 @@
   margin-top: 1rem;
 }
 
+.logo {
+  font-family: Lobster Two;
+  font-size: 2.5rem;
+  margin-left: 1rem;
+}
+
 @media (max-width: 768px) {
   .profileImage {
     height: 3rem;
@@ -33,5 +39,9 @@
     width: 60vw;
     margin-top: -3rem;
     margin-left: 9rem;
+  }
+  .logo {
+    font-size: 1.2rem;
+    margin-left: 0.5rem;
   }
 }
