--- a/src/components/Shows/ShowDetail.module.css
+++ b/src/components/Shows/ShowDetail.module.css
@@ -87,6 +87,11 @@ h3 {
 .btn {
   margin-top: 2rem;
 }
+.logo {
+  font-family: Lobster Two;
+  font-size: 2.5rem;
+  margin-left: 1rem;
+}
 
 @media (max-width: 768px) {
   .boxSummary {
