--- a/src/components/Seats/Seat.module.css
+++ b/src/components/Seats/Seat.module.css
@@ -5,22 +5,28 @@
 }
 .component {
   background-color: rgb(0, 0, 0);
-  width: 18rem;
+  width: 23.5rem;
   margin: 0px;
+  border-radius: 8px;
+}
+
+.label {
+  color: white;
 }
 
 * {
   box-sizing: border-box;
 }
 
-
 .container {
   perspective: 1000px;
   margin-bottom: 30px;
+  padding: 1rem;
+  margin-left: 2rem;
 }
 
 .seat {
-  background-color: #444451;
+  background-color: #e310ff;
   height: 12px;
   width: 15px;
   margin: 3px;
@@ -56,7 +62,7 @@
 }
 
 .showcase {
-  background-color: rgba(0, 0, 0, 0.1);
+  background-color: rgb(161, 160, 160);
   padding: 5px 10px;
   border-radius: 5px;
   color: #777;
