--- a/src/components/Shows/ShowDetailHome.module.css
+++ b/src/components/Shows/ShowDetailHome.module.css
@@ -34,6 +34,7 @@
 .boxSummary {
   width: 63rem;
   height: auto;
+  margin: 2rem;
 }
 
 .box {
@@ -82,7 +83,6 @@ h3 {
 .timer {
   display: flex;
   gap: 0.3rem;
-  
 }
 
 .btn {
